# StarDict

./: CMakeLists.txt  README.md
src/: CMakeLists.txt
src/libStarDict/: clsStarDict.cpp  clsStarDict.h
src/libStarDict/Private/: clsStarDict_p.cpp  clsStarDict_p.h  dictziplib.cpp  dictziplib.hpp  distance.cpp  distance.h  file.hpp  mapfile.hpp
test/: CMakeLists.txt  main.cpp
